# python-package

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-all.txt
src/first-package-namespace/plugins/myplugin/: main.py
src/first-package-namespace/subpkg1/: __init__.py  main.py
src/first-package-namespace/subpkg2/: main.py
src/second-package-namespace/subpkg1/: main.py
src/second-package-namespace/subpkg3/: main.py
tools/: generate.py
usage-example/: main.py
